# rust-kernel-demo

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: allocator.rs  interrupts.rs  main.rs  memory.rs  vga_buffer.rs
src/task/: mod.rs
